// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicPage always show content header 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundStandard"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container StdExtPadding-Desktop"
      data-component-name="DynamicPageTitle"
      data-not-clickable="true"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-breadcrumbs"
        >
          <nav
            aria-label="Breadcrumb Trail"
          >
            <ol
              class="Breadcrumbs-list"
            >
              <li>
                <ui5-link
                  data-breadcrumb-index="0"
                  design="Default"
                  tabindex="0"
                  ui5-link=""
                >
                  Home
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="1"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 1
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="2"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 2
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="3"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 3
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="4"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 4
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="5"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 5
                </ui5-link>
              </li>
            </ol>
          </nav>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
          <div
            class="DynamicPageTitle-content"
            style="padding-left: 0.5rem;"
          >
            <ui5-badge
              color-scheme="1"
              ui5-badge=""
            >
              Status: OK
            </ui5-badge>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear"
        >
          <div
            class="Toolbar-toolbar"
          >
            <span
              class="spacer"
              style="flex-grow: 1;"
            />
            <div>
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
            <div>
              <div
                aria-label="Separator"
                class="ToolbarSeparator-separator"
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="full-screen"
                ui5-button=""
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="exit-full-screen"
                ui5-button=""
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="decline"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitleBottom"
        >
          <ui5-label
            ui5-label=""
          >
            This is a subheading
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header StdExtPadding-Desktop"
      data-component-name="DynamicPageHeader"
      style="top: 0px; z-index: 1;"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBar"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-anchorBarActionButton"
        role="navigation"
      >
        <ui5-button
          aria-label="Expand Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable "
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-down"
          title="Expand Header"
          ui5-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer StdExtPadding-Desktop"
      data-component-name="DynamicPageContent"
      style="margin-top: 0px; padding-bottom: 0px;"
    />
  </div>
</DocumentFragment>
`;

exports[`DynamicPage hider header button 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundStandard"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container StdExtPadding-Desktop"
      data-component-name="DynamicPageTitle"
      data-not-clickable="true"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear"
        >
          <div
            class="Toolbar-toolbar"
          >
            <span
              class="spacer"
              style="flex-grow: 1;"
            />
            <div>
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitleBottom"
        >
          <ui5-label
            ui5-label=""
          >
            This is a subheading
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header StdExtPadding-Desktop"
      data-component-name="DynamicPageHeader"
      style="top: 0px; z-index: 1;"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBar"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-anchorBarActionButton"
        role="navigation"
      />
    </div>
    <div
      class="DynamicPage-contentContainer StdExtPadding-Desktop"
      data-component-name="DynamicPageContent"
      style="margin-top: 0px; padding-bottom: 0px;"
    >
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        />
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DynamicPage render footer 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundStandard"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBar"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-anchorBarActionButton"
        role="navigation"
      >
        <ui5-button
          aria-label="Expand Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable "
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-down"
          title="Expand Header"
          ui5-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer StdExtPadding-Desktop"
      data-component-name="DynamicPageContent"
      style="margin-top: 0px; padding-bottom: 1rem;"
    />
    <footer
      class="DynamicPage-footer"
      data-component-name="DynamicPageFooter"
    >
      <ui5-bar
        design="FloatingFooter"
        ui5-bar=""
      >
        <span
          class="Text-text"
          slot="endContent"
        >
          Footer
        </span>
      </ui5-bar>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`DynamicPage with content 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundStandard"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container StdExtPadding-Desktop"
      data-component-name="DynamicPageTitle"
      data-not-clickable="false"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-breadcrumbs"
        >
          <nav
            aria-label="Breadcrumb Trail"
          >
            <ol
              class="Breadcrumbs-list"
            >
              <li>
                <ui5-link
                  data-breadcrumb-index="0"
                  design="Default"
                  tabindex="0"
                  ui5-link=""
                >
                  Home
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="1"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 1
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="2"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 2
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="3"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 3
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="4"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 4
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="5"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 5
                </ui5-link>
              </li>
            </ol>
          </nav>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
          <div
            class="DynamicPageTitle-content"
            style="padding-left: 0.5rem;"
          >
            <ui5-badge
              color-scheme="1"
              ui5-badge=""
            >
              Status: OK
            </ui5-badge>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear"
        >
          <div
            class="Toolbar-toolbar"
          >
            <span
              class="spacer"
              style="flex-grow: 1;"
            />
            <div>
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
            <div>
              <div
                aria-label="Separator"
                class="ToolbarSeparator-separator"
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="full-screen"
                ui5-button=""
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="exit-full-screen"
                ui5-button=""
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="decline"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitleBottom"
        >
          <ui5-label
            ui5-label=""
          >
            This is a subheading
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header StdExtPadding-Desktop"
      data-component-name="DynamicPageHeader"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBar"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-anchorBarActionButton"
        role="navigation"
      >
        <ui5-button
          aria-label="Expand Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable "
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-down"
          title="Expand Header"
          ui5-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer StdExtPadding-Desktop"
      data-component-name="DynamicPageContent"
      style="margin-top: 0px; padding-bottom: 0px;"
    >
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem; z-index: 0;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        />
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        />
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem; z-index: 0;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        />
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Phone Numbers"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Phone Numbers"
        >
          Phone Numbers
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-8901
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        />
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            +1 234-567-5555
          </span>
        </div>
        <h6
          aria-label="Social Accounts"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Social Accounts"
        >
          Social Accounts
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          LinkedIn:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            /DeniseSmith
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Twitter:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            @DeniseSmith
          </span>
        </div>
      </div>
      <div
        class="Form-form Form-labelSpan4"
        data-columns="4"
        style="padding-bottom: 2rem;"
      >
        <h6
          aria-label="Addresses"
          style="grid-column-end: span 12; grid-column-start: 1; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Addresses"
        >
          Addresses
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Home Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            2096 Mission Street
          </span>
        </div>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 1; grid-row-start: 4;"
          ui5-label=""
          wrap="true"
        >
          Mailing Address:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 5; grid-row-start: 4; padding-bottom: 1rem;"
        >
          <span
            class="Text-text"
          >
            PO Box 32114
          </span>
        </div>
        <h6
          aria-label="Mailing Address"
          style="grid-column-end: span 12; grid-column-start: 13; grid-row-start: 2; display: flex; align-items: center; font-family: var(--sapFontFamily); line-height: var(--sapWcrFormGroupTitleHeight); font-weight: bold; margin: 0px; padding-top: 1rem;"
          title="Mailing Address"
        >
          Mailing Address
        </h6>
        <ui5-label
          class="FormItem-label"
          style="grid-column-start: 13; grid-row-start: 3;"
          ui5-label=""
          wrap="true"
        >
          Work:
        </ui5-label>
        <div
          class="FormItem-content"
          style="grid-column-start: 17; grid-row-start: 3; padding-bottom: 0px;"
        >
          <span
            class="Text-text"
          >
            DeniseSmith@sap.com
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DynamicPage without content 1`] = `
<DocumentFragment>
  <div
    class="DynamicPage-dynamicPage sapScrollBar DynamicPage-backgroundStandard"
  >
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-container StdExtPadding-Desktop"
      data-component-name="DynamicPageTitle"
      data-not-clickable="false"
    >
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentSpaceBetween FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-breadcrumbs"
        >
          <nav
            aria-label="Breadcrumb Trail"
          >
            <ol
              class="Breadcrumbs-list"
            >
              <li>
                <ui5-link
                  data-breadcrumb-index="0"
                  design="Default"
                  tabindex="0"
                  ui5-link=""
                >
                  Home
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="1"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 1
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="2"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 2
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="3"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 3
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="4"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 4
                </ui5-link>
                <ui5-label
                  aria-hidden="true"
                  class="Breadcrumbs-separatorInline"
                  ui5-label=""
                >
                  /
                </ui5-label>
              </li>
              <li>
                <ui5-link
                  data-breadcrumb-index="5"
                  design="Default"
                  tabindex="-1"
                  ui5-link=""
                >
                  Page 5
                </ui5-link>
              </li>
            </ol>
          </nav>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        style="flex-grow: 1; width: 100%;"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPageTitle-titleMainSection"
        >
          <div
            class="DynamicPageTitle-title"
          >
            <ui5-title
              level="H2"
              ui5-title=""
            >
              Header Title
            </ui5-title>
          </div>
          <div
            class="DynamicPageTitle-content"
            style="padding-left: 0.5rem;"
          >
            <ui5-badge
              color-scheme="1"
              ui5-badge=""
            >
              Status: OK
            </ui5-badge>
          </div>
        </div>
        <div
          class="Toolbar-outerContainer Toolbar-clear"
        >
          <div
            class="Toolbar-toolbar"
          >
            <span
              class="spacer"
              style="flex-grow: 1;"
            />
            <div>
              <ui5-button
                design="Emphasized"
                ui5-button=""
              >
                Edit
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Delete
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Copy
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                ui5-button=""
              >
                Toggle Footer
              </ui5-button>
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="action"
                ui5-button=""
              />
            </div>
            <div>
              <div
                aria-label="Separator"
                class="ToolbarSeparator-separator"
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="full-screen"
                ui5-button=""
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="exit-full-screen"
                ui5-button=""
              />
            </div>
            <div>
              <ui5-button
                design="Transparent"
                icon="decline"
                ui5-button=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap"
      >
        <div
          class="DynamicPageTitle-subTitleBottom"
        >
          <ui5-label
            ui5-label=""
          >
            This is a subheading
          </ui5-label>
        </div>
      </div>
    </div>
    <div
      class="DynamicPageHeader-header StdExtPadding-Desktop"
      data-component-name="DynamicPageHeader"
    >
      <div
        style="display: flex; flex-direction: column;"
      >
        <ui5-label
          ui5-label=""
        >
          Location: Warehouse A
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Halway: 23L
        </ui5-label>
        <ui5-label
          ui5-label=""
        >
          Rack: 34
        </ui5-label>
      </div>
      <div
        style="display: flex; flex-direction: column; margin-left: 2vw;"
      >
        <ui5-label
          ui5-label=""
        >
          Availability:
        </ui5-label>
        <div
          class="ObjectStatus-objectStatus ObjectStatus-success"
        >
          <span
            class="ObjectStatus-text"
          >
            In Stock
          </span>
        </div>
      </div>
    </div>
    <div
      class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap DynamicPage-anchorBar"
      data-component-name="DynamicPageAnchorBar"
      style="top: 0px;"
    >
      <section
        class="DynamicPageAnchorBar-anchorBarActionButton"
        role="navigation"
      >
        <ui5-button
          aria-label="Expand Header"
          class="DynamicPageAnchorBar-anchorBarActionButton DynamicPageAnchorBar-anchorBarActionButtonExpandable "
          data-ui5wcr-dynamic-page-header-action=""
          design="Default"
          icon="slim-arrow-down"
          title="Expand Header"
          ui5-button=""
        />
      </section>
    </div>
    <div
      class="DynamicPage-contentContainer StdExtPadding-Desktop"
      data-component-name="DynamicPageContent"
      style="margin-top: 0px; padding-bottom: 0px;"
    />
  </div>
</DocumentFragment>
`;
